--- a/styles/Prices.module.css
+++ b/styles/Prices.module.css
@@ -7,29 +7,34 @@
     border-left:solid 0.4vw rgb(205, 86, 86);
     border-right:solid 0.4vw rgb(35, 95, 148);
     bottom:-1%;
-    left:50%;
+    left:48.4%;
     position:absolute;
-    right:50%;
+    right:52%;
     top:1%;
-    z-index:1;
+    z-index:2;
 }
-.imgleft{
-    z-index:-3;
-    width:50vw;
+.imgLeft{
+    z-index:-2;
+    width:48vw;
     height:98vh;
     position: absolute;
+    display:block;
+    transform:skew(10deg,0deg);
     overflow:hidden;
 }
 .imgRight{
-    z-index:-2;
-    width:50vw;
+    right:4vw;
+    z-index:-3;
+    width:48vw;
     height:98vh;
     position: absolute;
+    transform:skew(10deg,0deg);
     overflow:hidden;
 }
 .lg{
     margin-top:45%;
     text-align: center;
+    z-index: -1;
 }
 .smleft{
     text-align: center;
