reset prices page

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,18 +15,17 @@ a {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+body {
+  color: white;
+  background: black;
 }
-.notFound {
+
+.centerText {
   text-align: center;
 }
 .noflow{
   overflow: hidden;
+}
+.noFlowX{
+  overflow-x: hidden;
 }
