--- a/styles/Prices.module.css
+++ b/styles/Prices.module.css
@@ -1,46 +1,14 @@
-
-.centered{
-    text-align: center;
+.container{
+    z-index: -2;
+    width:50%;
+    height:100vh;
+    background-color: aqua;
+    position : fixed;
 }
-.divider {
-    background-color:rgb(118, 154, 111);
-    border-left:solid 0.4vw rgb(205, 86, 86);
-    border-right:solid 0.4vw rgb(35, 95, 148);
-    bottom:-1%;
-    left:48.4%;
-    position:absolute;
-    right:52%;
-    top:1%;
-    z-index:2;
-}
-.imgLeft{
-    z-index:-2;
-    width:48vw;
-    height:98vh;
-    position: absolute;
-    display:block;
-    transform:skew(10deg,0deg);
-    overflow:hidden;
-}
-.imgRight{
-    right:4vw;
-    z-index:-3;
-    width:48vw;
-    height:98vh;
-    position: absolute;
-    transform:skew(10deg,0deg);
-    overflow:hidden;
-}
-.lg{
-    margin-top:45%;
-    text-align: center;
+.container2{
     z-index: -1;
-}
-.smleft{
-    text-align: center;
-    margin-top: 5vh;
-}
-.smright {
-    text-align: center;
-    margin-top:40vh;
+    width:100%;
+    height:100vh;
+    background-color: rgb(142, 190, 231);
+    position : fixed;
 }
