--- a/styles/Prices.module.css
+++ b/styles/Prices.module.css
@@ -1,30 +1,62 @@
+
+
 .container{
     position:relative;
     z-index: 1;
     width: 100vw;
     height: 100vh;
     overflow: hidden;
+    background-color: #ecb074;
+    animation: bgColor 30s infinite linear;
 }
+/* @keyframes bgColor {
+    12.5% {
+      background-color: #FF0000;
+    }
+    25% {
+      background-color: #FFA500;
+    }
+    37.5% {
+      background-color: #FFFF00;
+    }
+    50% {
+      background-color: #7FFF00;
+    }
+    62.5% {
+      background-color: #00FFFF;
+    }
+    75% {
+      background-color: #0000FF;
+    }
+    87.5% {
+      background-color: #9932CC;
+    }
+    100% {
+      background-color: #FF1493;
+    }
+  } */
 
 /* SM */
 .container1{
     z-index: 1;
-    width:50%;
-    height:100vh;
+    width:45%;
+    height:95vh;
     position : fixed;
-    left: 0;
+    left: 5vw;
+    top: 2vh;
     transform: skew(-10deg, 0deg)
 }
 .container2{
-    z-index: 3;
-    width:50%;
-    height:100vh;
+    z-index: 2;
+    width:45%;
+    height:95vh;
     position : fixed;
-    right: 0;
+    right: 5vw;
+    top:2vh;
     transform: skew(-10deg, 0deg)
 }
 .card{
-    z-index: 4;
+    z-index: 3;
     position : relative;
     display:inline-block;
 }
